welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: not found: value repMof
override def run(){repMof()}
                   ^